# ethereum_evm

./: .gitmodules  Cargo.toml  README.md  TODO.md  output.test  runtest.sh  test.py
official_test_types/: Cargo.toml
official_test_types/src/: types.rs  util.rs
src/: assembler.rs  bytecode_spec.rs  evm.rs  gas_calculator.rs  lib.rs  machine.rs  main.rs  result.rs  runtime.rs  util.rs
src/configs/: gas_costs.rs  mod.rs  precompiles.rs
src/evm_logic/: evm.rs  gas_calculator.rs  gas_recorder.rs  mod.rs  util.rs
src/evm_logic/evm/: call.rs  create.rs  decoder.rs  macros.rs
src/evm_logic/evm/precompiles/: ecrecover.rs  mod.rs  sha2_256.rs
src/evm_logic/state/: memory.rs  mod.rs  program_memory.rs  stack.rs
src/state/: memory.rs  mod.rs  stack.rs
test_gen/: Cargo.toml  README.md
test_gen/src/: lib.rs
tests/: assembler.rs  basic_test.json  basic_test.rs  mock_runtime.rs  tests_from_definitions.rs
tests/mocks/: mock_runtime.rs  mod.rs
tests/official_tests/: error.rs  mod.rs  official_tests.rs  types.rs  util.rs
tests/test_definitions/: basic_tests.json
util/: Cargo.toml
util/src/: lib.rs
