[package]
name = "ethereum_evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
ethereum = "0.15.0"
ethnum = {version = "1.5.0", features = ["serde"]}
hex = "0.4.3"
keccak-hash = "0.10.0"
paste = "1.0.14"
rlp = "0.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
test_gen = { path = "./test_gen" }
thiserror = "1.0.58"
