workspace = { members = ["official_test_types", "util"] }
[package]
name = "ethereum_evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test_gen = { path = "./test_gen" }
official_test_types = { path = "./official_test_types" }
util = { path = "./util" }
array-init = "2.1.0"
ethereum = "0.15.0"
primitive-types = { version = "0.12", features = ["rlp", "serde"] }
hex = "0.4.3"
paste = "1.0.14"
rlp = "0.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10.8"
thiserror = "1.0.58"
num256 = "0.5.1"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
quote = "1.0.35"
secp256k1 = { version = "0.30", features = ["recovery"] }
keccak-hash = "0.11.0"
sha2 = "0.10.8"
hex-literal = "0.3"

[profile.dev]
opt-level = 3 # Use slightly better optimizations.
